[metadata]
name = ReconcileBqData
version = 0.0.1
author = George Tzanakis
author_email = g.tzanakis@ferryhopper.com
description = Reconcile booking documents data ingested in BQ 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
[options]
packages = find:
python_requires = >=3.9
include_package_data = True
